<resources>
    <string name="app_name">Goody</string>
    <string name="open_drawer" translatable="false">open_drawer</string>
    <string name="close_drawer" translatable="false">close_drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_support">Support</string>
    <string name="action_about">About</string>
    <string name="news_title">Feed</string>
    <string name="intro_close">Close</string>
    <string name="intro_start">Start</string>
    <string name="item_image_description">Deal main image</string>
    <string name="item_share_description">Share</string>
    <string name="event_invites">invites you</string>
    <string name="event_participates_label">Participates:</string>
    <string name="menu_report">Report</string>
    <string name="join">Join</string>
    <string name="leave">Leave</string>
    <string name="register_avatar_description">Choose avatar</string>
    <string name="go">Go</string>
    <string name="password_hint">Password</string>
    <string name="email_hint" translatable="false">Email</string>
    <string name="name_hint">Login (Latin, numbers, _)</string>
    <string name="login_redirect">Do not have account?</string>
    <string name="login_title">Login</string>
    <string name="invalid_fields_message">Please make all fields valid</string>
    <string name="register_progress_title">Signing up</string>
    <string name="login_progress_title">Logging in</string>
    <string name="register_title">Registration</string>
    <string name="read_permission_denied">Please give us permissions first</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="google" translatable="false">Google</string>
    <string name="vk" translatable="false">VK</string>
    <string name="oauth_google_description">Authenticate via Google</string>
    <string name="oauth_facebook_description">Authenticate via Facebook</string>
    <string name="oauth_vk_description">Authenticate via VK</string>
    <string name="new_post_title">New post</string>
    <string name="description_hint">What\'s happened?</string>
    <string name="location_permission_denied">Give us location permissions first</string>
    <string name="new_post_create">Create</string>
    <string name="create_post_progress">Creating</string>
    <string name="content_add_photo">Add photo</string>
    <string name="content_add_place">Add place</string>
    <string name="content_send">Send</string>
    <string name="content_clear_location">Clear location</string>
    <string name="content_new_post_photo">Post photo</string>
    <string name="content_clear_image">Clear image</string>
    <string name="content_avatar">User avatar</string>
    <string name="content_more">More actions</string>
    <string name="dialog_item_0">Choose photo</string>
    <string name="dialog_item_1">Take picture</string>
    <string name="dialog_title">Choose action</string>
    <string name="report_submitted">Report submitted</string>
    <string name="expand">more</string>
    <string name="unknown_error">Unknown error</string>
    <string name="retry">Retry</string>
    <string name="detail_title">Post</string>
    <string name="hint_comment">Comment</string>
    <string name="about_text">This is Goody</string>
    <string name="setting_title">Settings</string>
    <string name="event_default_title">Attention!</string>
    <string name="choose_date">When the help is needed?</string>
    <string name="choose_time">Select time…</string>
    <string name="new_event_title">New Event</string>
    <string name="title_hint">Title</string>
    <string name="event_description_hint">Description</string>
    <string name="resources_hint">Resources</string>
    <string name="choose_location">Choose location…</string>
    <string name="choose_photo">Choose photo…</string>
    <string name="open_event">Reopen</string>
    <string name="close_event">Close</string>
    <string name="event_opened">Event was successfully reopened</string>
    <string name="event_closed">Event was successfully closed</string>
    <string name="logout">Log out</string>
    <string name="follow">Follow</string>
    <string name="profile">Profile</string>
    <string name="user_posts">User posts</string>
    <string name="profile_followers">Followers</string>
    <string name="profile_posts_count">Posts</string>
    <string name="profile_event_count">Events</string>
    <string name="unfollow">Unfollow</string>
    <string name="my_posts">My posts</string>
    <string name="registration_date_format">With us since %s</string>
    <string name="photo_title">Photo</string>
    <string name="photo">Photo</string>
    <string name="near_events">Near events</string>
    <string name="detail">Detail</string>
    <string name="refresh">Refresh</string>
    <string name="edit">Edit</string>
    <string name="edit_post_progress">Editing</string>
    <string name="edit_post_title">Edit post</string>
    <string name="edit_event_title">Edit event</string>
    <string name="quick_word_0">Ready to help</string>
    <string name="quick_word_1">What should I bring with me?</string>
    <string name="quick_word_2">I\'ll be there soon</string>
    <string name="participating_events">Active events</string>
    <string name="cache_image_permission_denied">Cannot cache post image without permissions</string>
    <string name="delete">Delete</string>
    <string name="delete_success">Post was successfully deleted</string>
    <string name="comment_reply">Reply</string>
    <string name="login_forgot_password">Forgot a password?</string>
    <string name="deafult_hint">Start typing…</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_password_title">Enter your email</string>
    <string name="recover_instructions_sent">Recover instructions sent to %s</string>
    <string name="comment_notification_format">%s: %s</string>
    <string name="feedback_title">Feedback</string>
    <string name="empty_list">No items here :(</string>
    <string name="feedback_comment">Commented on your post</string>
    <string name="feedback_common">Click to see details</string>
    <string name="mention_notification_format">%s mentioned you</string>
    <string name="login_subtitle">Let\'s make the good together!</string>
    <string name="login_submit">Login</string>
    <string name="register_action">Register</string>
    <string name="sex_male">Male</string>
    <string name="sex_female">Female</string>
    <string name="register_sex_title">Sex</string>
    <string name="register_birthday_title">Birthday</string>
    <string name="register_redirect">Login</string>
    <string name="map">Map</string>
    <string name="content_all">All</string>
    <string name="content_events">Events</string>
    <string name="content_deals">Deals</string>
    <string name="active_join">Help!</string>
    <string name="process_join">Join</string>
    <string name="finished_event">Finished</string>
    <string name="choose_resource_title">What is needed for the help?</string>
    <string name="choose_tag_title">Enter the tags, separated by comma</string>
    <string name="tag_already_present">This tag is already present in this post</string>
    <string name="profile_awards">Awards</string>
    <string name="active_events">Active</string>
    <string name="progress_events">In progress</string>
    <string name="finished_events">Finished</string>
    <string name="choose_help_title">Be notified about help near to you</string>
    <string name="enable_geo_title">Enable geo conditions</string>
    <string name="distance_title">Distance</string>
    <string name="submit">Submit</string>
    <string name="help_info_loading">Loading current info…</string>
    <string name="error">Error</string>
    <string name="help_info_load_error">Failed to load current help settings</string>
    <string name="skip">Skip</string>
    <string name="setting_choose_help">My resources</string>
    <string name="distance_value" translatable="false">%d km</string>
    <string name="help_info_updating">Updating help settings…</string>
    <string name="preset_tags_title">Use popular</string>
    <string name="custom_tags_title">Or add your own</string>
    <string name="preset_tag_0">Car</string>
    <string name="preset_tag_1">Time</string>
    <string name="preset_tag_2">Physical strength</string>
    <string name="preset_tag_3">Camera</string>
    <string name="preset_tag_4">Cable</string>
    <string name="preset_tag_5">Repair kit</string>
    <string name="preset_tag_6">Lighter battery</string>
    <string name="preset_tag_7">Canister</string>
    <string name="preset_tag_8">Shovel</string>
    <string name="preset_tag_9">Lamp</string>
    <string name="preset_tag_10">Volunteers</string>
    <string name="new_event_notification_title">Help needed</string>
    <string name="new_event_notification_content">New event with tags: %s</string>
    <string name="settings_mention">Mentions</string>
    <string name="settings_comments">Comments</string>
    <string name="invalid_name">Name must contain only lowercase Latin letters and be at least 4 characters long</string>
    <string name="invalid_email">Email is invalid</string>
    <string name="invalid_password">Password should be at least 8 characters long</string>
    <string name="open_full">Open</string>
    <string name="choose_help_add_tag">Add resource</string>
    <string name="date_immediately">Immediately</string>
    <string name="date_pick">Pick manually</string>
    <string name="title_event_finished">Event finished</string>
    <string name="event_finished_message">Help for %s was provided by %s</string>
    <string name="comment_deleted">Comment was successfully deleted</string>
    <string name="new_participator_content">\@%s is ready to help you</string>
    <string name="follow_new_event_content">\@%s needs your help!</string>
    <string name="settings_finished_event">Event finishing</string>
    <string name="settings_new_participator">New participator</string>
    <string name="settings_new_followee">My followers</string>
    <string name="settings_new_followee_summary">New events of people you are subscribed to</string>
    <string name="settings_finished_event_summary">Finishing event you are participating in</string>
    <string name="birthday_hint">Choose the date</string>
    <string name="intro_location_hint">Select distance within which you want to receive notifications</string>
    <string name="intro_location_title">Good! Do you want to receive notifications from people who need a help?</string>
    <string name="intro_finish_title">Make world better!</string>
    <string name="intro_finish_subtitle">Help others and take help yourself, get rewards</string>
    <string name="action_continue">Continue</string>
    <string name="lets_go">Let\'s go!</string>
    <string name="location_auto">Current location</string>
    <string name="location_manual">Choose on map</string>
    <string name="finding_location">Getting last location…</string>
    <string name="location_find_error">Cannot get last location. Please try to pick it manually</string>
    <string name="participants_count" translatable="false">+ %d</string>
    <string name="participants_title">Event Participants</string>
    <string name="choose_location_none">Clear</string>
    <string name="choose_location_map">On map</string>
    <string name="content_feed">Feed</string>
    <string name="followers">Followers</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="invalid_phone">Invalid phone format</string>
    <string name="choose_phone_visibility">Phone visibility</string>
    <string name="phone_visibility_all">Everyone</string>
    <string name="feedback_phone_request">Requested your phone</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
</resources>