<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="im.goody.android.data.dto.Feedback" />

        <import type="im.goody.android.utils.DateUtils" />

        <import type="im.goody.android.Constants.NotificationExtra" />
    </data>

    <android.support.constraint.ConstraintLayout
        style="@style/FullWidthLayout"
        android:background="?attr/selectableItemBackground">

        <im.goody.android.ui.views.CircleImageView
            android:id="@+id/feedback_avatar"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:layout_marginLeft="@dimen/size_normal"
            android:layout_marginStart="@dimen/size_normal"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_avatar"
            android:src="@drawable/round_drawable"
            app:author_avatar="@{data.author.avatarUrl}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/feedback_user_name" />

        <TextView
            android:id="@+id/feedback_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_normal"
            android:layout_marginStart="@dimen/size_normal"
            android:layout_marginTop="@dimen/size_normal"
            android:text="@{data.author.name}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintLeft_toRightOf="@+id/feedback_avatar"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="User name" />

        <TextView
            android:id="@+id/feedback_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_normal"
            android:layout_marginRight="@dimen/size_normal"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/feedback_phone_request"
            app:layout_constraintLeft_toLeftOf="@+id/feedback_user_name"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feedback_user_name" />

        <TextView
            android:id="@+id/feedback_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_normal"
            android:layout_marginRight="@dimen/size_normal"
            android:text="@{DateUtils.getReadableDate(data.date)}"
            app:layout_constraintBottom_toBottomOf="@+id/feedback_user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/feedback_user_name"
            tools:text="1d" />

        <Button
            android:id="@+id/request_allow"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allow"
            app:layout_constraintStart_toStartOf="@+id/feedback_body"
            app:layout_constraintTop_toBottomOf="@+id/feedback_body" />

        <Button
            android:id="@+id/request_deny"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deny"
            app:layout_constraintStart_toEndOf="@+id/request_allow"
            app:layout_constraintTop_toBottomOf="@+id/feedback_body" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_divider"
            android:layout_marginLeft="@dimen/size_small"
            android:layout_marginStart="@dimen/size_small"
            android:layout_marginTop="@dimen/size_small"
            android:background="@color/divider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/feedback_date"
            app:layout_constraintStart_toStartOf="@+id/feedback_avatar"
            app:layout_constraintTop_toBottomOf="@+id/request_allow" />

    </android.support.constraint.ConstraintLayout>
</layout>